--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@ body{
     padding: 5px 13px;
     width: 60px;
     height: 28px;
-    color: black;
+    color: rgb(101,123,245);
     cursor: pointer;
     font-size: 14px;
 }
@@ -135,12 +135,12 @@ body{
 #baro{
     float: left;
 }
-.one-sentence{
+.tips{
     float: left;
     margin-top: 20px;
     font-size: 20px;
 }
-#sentence-key{
+#tips-key{
     float: right;
     height: 22px;
     width: 22px;
@@ -195,6 +195,7 @@ body{
     height: 492px;
     margin-left: 10%;
     margin-top: 40px;
+    margin-bottom: 50px;
 }
 #livingIndex-container{
     margin-top: 40px;
