--- a/css/index.css
+++ b/css/index.css
@@ -270,12 +270,30 @@ body{
     color: #384c78;
     line-height: 14px;
     height: 14px;
+    margin-bottom: 20px;
 }
 .day-icon{
     height: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 .night-icon{
+    margin-top: 174px;
+    margin-bottom: 24px;
     height: 30px;
+}
+.night-weather{
+    font-size: 14px;
+    color: #384c78;
+    line-height: 14px;
+    height: 14px;
+}
+.wind-24h{
+    margin-top: 25px;
+    font-size: 12px;
+    color: #8a9baf;
+    line-height: 12px;
+    height: 12px;
 }
 #livingIndex-container{
     margin-top: 40px;
