--- a/css/index.css
+++ b/css/index.css
@@ -18,11 +18,9 @@ body{
   animation-duration: 2s;
 }
 .main-container{
-    border: 0;
-    margin: 0;
     height: 500px;
-    padding: 0;
-    background-image: url(./images/background.jpg);
+    background-color: blue;
+    background-image: url(../images/background.jpg);
     background-position: 50% 0px;                                     /*阴天50%*/
 }
 .top-container{
@@ -69,7 +67,7 @@ body{
     float: left;
     height: 16px;
     width: 16px;
-    background-image: url(./images/icon.png);
+    background-image: url(../images/icon.png);
     background-position: -216px -126px;
     background-size: 234px 212px;
     margin-right: 7px;
@@ -102,7 +100,7 @@ body{
     float: left;
     height: 18px;
     width: 18px;
-    background-image: url(./images/icon.png);
+    background-image: url(../images/icon.png);
     background-position: -192px -166px;
     background-size: 234px 212px;
     margin-top: 5px;
@@ -116,7 +114,7 @@ body{
     float: left;
     height: 18px;
     width: 18px;
-    background-image: url(./images/icon.png);
+    background-image: url(../images/icon.png);
     background-position: -192px -120px;
     background-size: 234px 212px;
     margin-top: 5px;
@@ -130,7 +128,7 @@ body{
     float: left;
     height: 18px;
     width: 18px;
-    background-image: url(./images/icon.png);
+    background-image: url(../images/icon.png);
     background-position: -192px -97px;
     background-size: 234px 212px;
     margin-top: 5px;
@@ -148,7 +146,7 @@ body{
     float: right;
     height: 22px;
     width: 22px;
-    background-image: url(./images/icon.png);
+    background-image: url(../images/icon.png);
     background-position: -120px -190px;
     background-size: 234px 212px;
     margin-top: 5px;
@@ -187,7 +185,7 @@ body{
     float: right;
     height: 24px;
     width: 24px;
-    background-image: url(./images/icon.png);
+    background-image: url(../images/icon.png);
     background-position: -190px -0px;
     background-size: 234px 212px;
     cursor: pointer;
@@ -201,7 +199,7 @@ body{
     float: right;
     height: 24px;
     width: 24px;
-    background-image: url(./images/icon.png);
+    background-image: url(../images/icon.png);
     background-position: -136px -154px;
     background-size: 234px 212px;
     cursor: pointer;
