--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,7 @@ body{
 }
 .main-container{
     height: 500px;
+    width: 100%;
     background-image: url(../images/background.jpg);
     background-position: 50% 0px;                                     /*阴天50%*/
 }
@@ -223,11 +224,14 @@ body{
 .hours-tempture{
     width: 40px;
 }
+#week-index-container{
+    width: 1200px;
+    margin-left: 10%;
+}
 #week-container{
     float: left;
     width: 740px;
     height: 492px;
-    margin-left: 10%;
     margin-top: 40px;
     margin-bottom: 50px;
 }
@@ -309,7 +313,6 @@ body{
 }
 #livingIndex-container{
     margin-top: 40px;
-    margin-right: 10%;
     float: right;
     width: 430px;
 }
