--- a/css/index.css
+++ b/css/index.css
@@ -356,6 +356,7 @@ body{
     width: 100%;
 }
 .detail{
+    text-indent:26px;
     font-size: 13px;
     vertical-align: middle;
     display: table-cell;
